# CometEngine

./: .clangd  .gitignore  CMakeLists.txt  README.md
CometEngine/: CMakeLists.txt  CometEngine.cpp  CometEngine.h
CometEngine/app/: CMakeLists.txt  Window.cpp  Window.h
CometEngine/app/io/: Input.cpp  Input.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
CometEngine/components/: CMakeLists.txt
CometEngine/components/2d/: Sprite.h
CometEngine/components/core/: Transform.h
CometEngine/ecs/: CMakeLists.txt  ComponentManager.h  ComponentPool.h  Entity.h  EntityManager.cpp  EntityManager.h  System.h  common.h
CometEngine/graphics/: CMakeLists.txt  Renderer.cpp  Renderer.h  glad.c
CometEngine/graphics/GL/: EBO.cpp  EBO.h  FBO.cpp  FBO.h  RBO.cpp  RBO.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
resources/shaders/: basic.fs.glsl
